--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "rick-and-morty",
+  "name": "rick-and-morty-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 9000",
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@vue/apollo-composable": "^4.0.0-alpha.7",
-    "@vue/composition-api": "^0.3.4",
-    "apo": "^0.0.0",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link": "^1.2.13",
-    "apollo-link-http": "^1.5.16",
-    "axios": "^0.19.0",
+    "@apollo/client": "^3.0.0-beta.49",
+    "@vue/apollo-composable": "^4.0.0-alpha.8",
+    "@vue/composition-api": "^0.5.0",
+    "axios": "^0.19.2",
     "bootstrap-vue": "^2.0.4",
-    "core-js": "^3.4.3",
-    "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
-    "pinia": "^0.0.5",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "core-js": "^3.6.5",
+    "graphql": "^15.0.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.6.0",
@@ -29,10 +23,7 @@
     "@vue/cli-service": "^4.1.0",
     "bootstrap": "^4.3.1",
     "mutationobserver-shim": "^0.3.3",
-    "node-sass": "^4.12.0",
-    "popper.js": "^1.15.0",
-    "portal-vue": "^2.1.4",
-    "sass-loader": "^7.1.0",
+    "react": "^16.13.1",
     "vue-cli-plugin-bootstrap-vue": "^0.5.0",
     "vue-template-compiler": "^2.6.10"
   }
