--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@apollo/client": "^3.0.0-rc.0",
+    "@apollo/client": "^3.0.2",
     "@vue/apollo-composable": "^4.0.0-alpha.8",
-    "@vue/composition-api": "^0.5.0",
-    "axios": "^0.19.2",
+    "@vue/composition-api": "0.5.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
-    "graphql": "^15.0.0",
+    "graphql": "^15.3.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.3.2"
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.10.1",
