--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "graphql": "^15.3.0",
-    "vue": "^2.6.11",
-    "vue-router": "^3.3.4"
+    "vue": "^3.0.0-beta.1",
+    "vue-router": "^4.0.0-beta.2"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.10.1",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "@vue/compiler-sfc": "^3.0.0-beta.1",
     "bootstrap": "^4.3.1",
     "mutationobserver-shim": "^0.3.3",
     "react": "^16.13.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-vue-next": "~0.1.3"
   }
 }
