--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 9000",
+    "dev": "vue-cli-service serve --port 9000",
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@apollo/client": "^3.0.2",
-    "@vue/apollo-composable": "^4.0.0-alpha.8",
-    "@vue/composition-api": "0.5.0",
-    "bootstrap-vue": "^2.15.0",
+    "@apollo/client": "^3.1.4",
+    "@vue/apollo-composable": "^4.0.0-alpha.10",
+    "@vue/composition-api": "1.0.0-beta.11",
+    "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
     "graphql": "^15.3.0",
-    "vue": "^3.0.0-beta.1",
-    "vue-router": "^4.0.0-beta.2"
+    "vue": "^3.0.0-rc.9",
+    "vue-router": "^4.0.0-beta.7"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.10.1",
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "@vue/compiler-sfc": "^3.0.0-beta.1",
-    "bootstrap": "^4.3.1",
+    "@vue/cli-plugin-babel": "^4.5.4",
+    "@vue/cli-service": "^4.5.4",
+    "@vue/compiler-sfc": "^3.0.0-rc.9",
+    "bootstrap": "^4.5.2",
     "mutationobserver-shim": "^0.3.3",
     "react": "^16.13.1",
     "vue-cli-plugin-vue-next": "~0.1.3"
